[package]
name = "gerador_de_senha"
version = "1.0.0"
edition = "2024"

[dependencies]
rand = "0.9.2"

[package.metadata.deb]
maintainer = "LaLunaInSky <lalunainsky@gmail.com>"
copyright = "2025, LaLunaInSky <lalunainsky@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """Um gerador de senha cli para o terminal"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [["target/release/gerador_de_senha", "usr/bin/", "755"]]
